# neon-puzzle

./: .gitignore  .prettierrc  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
.storybook/: preview.tsx
core/: generator.rs  lib.rs  model.rs  solver.rs
docs/: README.md  gameplay.md
docs/specs/: mvp.md
src/: App.tsx  types.ts
src/components/: Block.tsx  Board.tsx  CameraRig.tsx  Celebration.tsx  ElectricMaterial.tsx  MainMenu.tsx
src/stories/: Block.stories.tsx  Board.stories.tsx
