[package]
name = "neon-puzzle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "core/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
serde-wasm-bindgen = "0.6.5"
